one discrete one continuous

--- a/Integrating_continuous_credentials.tex
+++ b/Integrating_continuous_credentials.tex
@@ -3,6 +3,7 @@
 \usepackage{cite}
 \usepackage{geometry}
 \usepackage{amsmath}
+\usepackage{xspace}
 \usepackage{pythontex}
 \usepackage{graphicx}
 \usepackage{adjustbox}
@@ -264,7 +265,7 @@ P_A(s) =
 \right.
 \]
 
-We will find FAR and FRR as a function of the threshold $T$ and define the probability of success based on the single credential wallet as shown in section 3.2:
+We will find FAR and FRR as a function of the threshold $T$ and define the probability of success based on the single credential wallet as shown in Section 3.2:
 \[\text{FAR}(T) = \int_{T}^{\beta_2} P_A(s) ds =
 \left\{
 \begin{array}{ll}
@@ -380,15 +381,17 @@ For a wallet $w$ comprised of two independently and identically distributed cred
 
 a. \textbf{AND} Require both credentials to be satisfied. For success, we need both credentials to be either in safe state, or one in safe state and the other in leak state. If one of the credentials is either loss ot theft, the owner cannot satisfy the wallet and thus the wallet fails.
 
-\[
-P_{\text{Success}}(w^{\text{AND}}) = \mathrm{P_{\text{safe1}}} \cdot \mathrm{P_{\text{safe2}}} + \mathrm{P_{\text{safe1}}} \cdot \mathrm{P_{\text{leak2}}} + \mathrm{P_{\text{safe2}}} \cdot \mathrm{P_{\text{leak1}}}
-\]
+\begin{equation}
+    \label{eqn:andsuccess}
+P_{\text{Success}}(w^{\text{AND}}) = \mathrm{P^1_{safe}} \cdot \mathrm{P^2_{safe}} + \mathrm{P^1_{safe}} \cdot \mathrm{P^2_{leak}} + \mathrm{P^2_{safe}} \cdot \mathrm{P^1_{leak}}
+\end{equation}
 
 b. \textbf{OR} Require at least one credential to be satisfied. For success, we need both credential to be either in safe state, or one in safe state and the other in loss state. If one of the credentials is either leak ot theft, the attacker can satisfy the wallet and thus the wallet fails.
 
-\[
-P_{\text{Success}}(w^{\text{OR}}) = \mathrm{P_{\text{safe1}}} \cdot \mathrm{P_{\text{safe2}}} + \mathrm{P_{\text{safe1}}} \cdot \mathrm{P_{\text{loss2}}} + \mathrm{P_{\text{safe2}}} \cdot \mathrm{P_{\text{loss1}}}
-\]
+\begin{equation}
+    \label{eqn:orsuccess}
+P_{\text{Success}}(w^{\text{OR}}) = \mathrm{P^1_{safe}} \cdot \mathrm{P^2_{safe}} + \mathrm{P^1_{safe}} \cdot \mathrm{P^2_{loss}} + \mathrm{P^2_{safe}} \cdot \mathrm{P^1_{loss}}
+\end{equation}
 
 For each wallet type, we analyzed the case of two independently and identically distributed credentials in 2 cases:
 
@@ -397,56 +400,134 @@ a. A mechanism comprised of 1 discrete credential and 1 continuous credetial.
 b. A mechanism comprised of 2 continuously distributed credentials
 
 We derived the optimal operating point for both \textbf{AND} and \textbf{OR} wallets by maximizing the respective success probabilities with respect to the thresholds of each credential.
-\subsection{AND Wallet}
-We started by analyzing the case of a wallet comprised of 1 discrete credential and 1 continuous credential. We defined the discrete credential with a constant value of each one of the probabilities' states as: $ k_1, k_2,k_3, k_4 $ corrsponding respectively to each one of the states: ${\text{safe}}$, ${\text{loss}}$, ${\text{leak}}$ and ${\text{theft}}$. The continuous credential is defined by its PDFs for the user and the attacker, $P_U$ and $P_A$ respectively. We firstly analyzed the uniformly distributed credential between the bounds of $u_1$,$u_2$ corrsponding to the user distribution and $a_1$,$a_2$ corresponds to the attacker, similarly to section 3.2.1. Denote $s_i$ the state of credential $i\in(Continuous,Discrete)$, we derived the probability of the credentails and the probability of success for the \textbf{AND} wallet as follows:
+\subsection{1 Discrete and 1 Continuous Credential}
+We started by analyzing the case of an \textbf{AND} wallet comprised of 1 discrete credential and 1 continuous credential. Denote $s_i$ the state of credential $i\in(Discrete,Continuous)$, we defined the discrete credential with a constant value of each one of the probabilities' states as: $ P^1_{safe}, P^1_{loss}, P^1_{leak}, P^1_{theft} $ corrsponding respectively to each one of the states: ${\text{safe}}$, ${\text{loss}}$, ${\text{leak}}$ and ${\text{theft}}$. The continuous credential is defined by its PDFs for the user and the attacker, $P_U$ and $P_A$ respectively. We firstly analyzed the uniformly distributed credential between the bounds of $u_1$,$u_2$ corrsponding to the user distribution and $a_1$,$a_2$ corresponds to the attacker, similarly to Section 3.2.1. We derived the probability of the continuous credentail as follows:
 
 \[
 \begin{aligned}
-{P_{\text{safe1}}} &= 1 - \text{FAR}(T) - \text{FRR}(T) + \text{FAR}(T) \cdot \text{FRR}(T),\\
-{P_{\text{safe2}}} &= k_1, \\
-{P_{\text{leak1}}} &= \text{FAR}(T)\,\bigl(1 - \text{FRR}(T)\bigr), \\
-{P_{\text{leak2}}} &= k_3. 
+P^2_{safe} &= 1 - \text{FAR}(T) - \text{FRR}(T) + \text{FAR}(T) \cdot \text{FRR}(T),\\
+P^2_{leak} &= \text{FAR}(T)\,\bigl(1 - \text{FRR}(T)\bigr).
 \end{aligned}
 \]
 
+To analyze the probability of success for the \textbf{AND} wallet, we set the above probabilities into Equation~\ref{eqn:andsuccess}. Thus, the probability of success is a function of the threshold $T$ and divided into 5 intervals.
 
-\[
-P_{\text{success}}(T) =
+\newcommand{\Psuccess}{\ensuremath{
+P_{\text{success}}(T)=
 \begin{cases}
-k_1, 
+P^{1}_{\text{safe}}, 
 & T \le a_1, \\[10pt]
 
-(k_1 + k_3) - k_3\,\dfrac{a_2 - T}{a_2 - a_1}, 
+(P^{1}_{\text{safe}} + P^{1}_{\text{leak}})
+- P^{1}_{\text{leak}}\,\dfrac{a_2 - T}{a_2 - a_1}, 
 & a_1 < T \le u_1, \\[14pt]
 
 \dfrac{u_2 - T}{u_2 - u_1}
 \left[
-(k_1 + k_3)
-- k_3\,\dfrac{a_2 - T}{a_2 - a_1}
+(P^{1}_{\text{safe}} + P^{1}_{\text{leak}})
+- P^{1}_{\text{leak}}\,\dfrac{a_2 - T}{a_2 - a_1}
 \right],
 & u_1 < T \le a_2, \\[16pt]
 
-\dfrac{u_2 - T}{u_2 - u_1}(k_1 + k_3), 
+\dfrac{u_2 - T}{u_2 - u_1}
+(P^{1}_{\text{safe}} + P^{1}_{\text{leak}}),
 & a_2 < T \le u_2, \\[12pt]
 
 0, 
-& T > u_2.
+& T > u_2
+\end{cases}
+}\xspace}
+
+\Psuccess
+\\
+
+We analyze the success probability $P_{\text{success}}(T)$ by partitioning the threshold domain into five intervals, each corresponding to a distinct relative positioning of the threshold with respect to the attacker and user distributions.
+
+The first interval, $T \le a_1$, corresponds to the case in which the threshold is lower than the minimum value of the attacker distribution. In this regime, the FAR is equal to~1, while the FRR is equal to~0. Consequently, the safe probability of the continuous credential is zero, and the success probability converges to $P^{1}_{\text{safe}}$. Since $P^{1}_{\text{safe}}$ is constant in this interval, no interior maximum exists.
+
+The second interval, $a_1 < T \le u_1$, corresponds to the case in which the threshold lies between the minimum value of the attacker distribution and the minimum value of the user distribution. In this region, the FAR decreases linearly as a function of~$T$, while the FRR remains equal to~0. As a result, the probabilities of the safe state and the leak state of the continuous credential are $1-\text{FAR}(T)$ and $\text{FAR}(T)$, respectively. In this interval, $P_{\text{success}}(T)$ is a strictly increasing function, as its derivative is a constant positive value, and therefore the maximum is attained at the boundary point
+\[
+T_{\text{opt2}} = u_1 .
+\]
+
+The third interval, $u_1 < T \le a_2$, corresponds to the case in which the threshold lies between the minimum value of the user distribution and the maximum value of the attacker distribution. In this region, both FAR and FRR vary linearly with~$T$, resulting in a success probability that is quadratic as a function of~$T$. Differentiating $P_{\text{success}}(T)$ yields a single critical point inside the interval,
+\[
+T_{\text{opt3}}
+=
+\frac{
+u_2 + a_2
+- (a_2 - a_1)\,\dfrac{P^{1}_{\text{safe}} + P^{1}_{\text{leak}}}{P^{1}_{\text{leak}}}
+}{2}
+\]
+
+
+By examining the optimal point in this interval, we can deduce that as the variance of the attacker distribution increases, the optimal threshold $T_{\text{opt3}}$ shifts toward the lower boundry of the interval, $u_1$. Moreover, for a discrete credential with high safe values $P^{1}_{\text{safe}}$, and low leak values $P^{1}_{\text{leak}}$, the optimal threshold shifts toward the lower boundary as well. Thus, in such case, the success of the wallet becomes mainly dependent on the discrete credential. Conversely, a discrete credential with high leak values $P^{1}_{\text{leak}}$ and low safe values $P^{1}_{\text{safe}}$ causes the optimal threshold to shift toward the upper boundary of the interval, $a_2$. In this scenario, the success of the wallet relies more heavily on the continuous credential.
+
+The fourth interval, $a_2 < T \le u_2$, corresponds to the case in which the threshold exceeds the maximum value of the attacker distribution. In this regime, the FAR is equal to~0, while the FRR increases linearly with~$T$. Consequently, $P_{\text{success}}(T)$ is a strictly decreasing function in this interval, and the maximum is attained at the boundary point
+\[
+T_{\text{opt4}} = a_2 .
+\]
+
+Finally, the fifth interval, $T > u_2$, corresponds to the case in which the threshold exceeds the maximum value of the user and the attacker distributions, leaving the success probability equal to~0.
+
+To determine the global optimal operating point, we compare all stationary points and boundary maxima obtained in the valid intervals. The optimal threshold is achieved in the third interval, where the attacker and user distributions overlap and the success function attains an interior maximum. Substituting $T_{\text{opt}}=T_{\text{opt3}}$ into $P_{\text{success}}(T)$ yields
+\[
+P_{\text{success}}(T_{\text{opt}}) =
+\frac{
+\left(
+- a_1 \big(P^{1}_{\text{safe}} + P^{1}_{\text{leak}}\big)
++ a_2 P^{1}_{\text{safe}}
++ P^{1}_{\text{leak}}\, u_2
+\right)^2
+}{
+4 P^{1}_{\text{leak}} (a_2 - a_1)(u_2 - u_1)
+}.
+\]
+
+We have done similar analysis for the \textbf{OR} wallet. We defined the credentials' probabilities of the wallet as follows:
+\[
+\begin{aligned} 
+{P_{\text{safe1}}} &= 1 - \text{FAR}(T) - \text{FRR}(T) + \text{FAR}(T) \cdot \text{FRR}(T),\\
+{P_{\text{safe2}}} &= k_1, \\
+{P_{\text{loss1}}} &= \text{FRR}(T)\,\bigl(1 - \text{FAR}(T)\bigr), \\
+{P_{\text{loss2}}} &= k_2.
+\end{aligned}
+\]
+Therefore, the probability of success for the \textbf{OR} wallet is defined as:
+\[
+P_{\text{success}}(T) =
+\begin{cases}
+0,
+& T \le a_1, \\[8pt]
+
+\dfrac{T - a_1}{a_2 - a_1}\,(k_1 + k_2),
+& a_1 < T \le u_1, \\[10pt]
+
+\dfrac{T - a_1}{a_2 - a_1}
+\left[
+k_1 + k_2
+- k_2\,\dfrac{T - u_1}{u_2 - u_1}
+\right],
+& u_1 < T \le a_2, \\[12pt]
+
+k_1 + k_2
+- k_2\,\dfrac{T - u_1}{u_2 - u_1},
+& a_2 < T \le u_2, \\[10pt]
+
+k_1,
+& T > u_2 .
 \end{cases}
 \]
 
-For every interval, we found the optimum point by diffrentiate $P_{\text{success}}(T)$. We identified the global maximum, which corresponds to the optimal threshold $T_{\text{opt}}$ by comparing the stationary values obtained in all valid regions.
+By differentiating every interval and identifying the critical points, we found that the optimal threshold that leads to the maximum probability of success lies in the third interval where \\ $u_1 < T \le a_2$ and is given by:
+\[T_{\text{opt}} = \frac{a_1 k_2 + u_2 (k_1 + k_2) - k_1 u_1}{2 k_2}\]
+And the maximum probability of success at this point is:
+\[P_{\text{success}}(T_{\text{opt}}) = \frac{\big(a_1 k_2 - u_2 (k_1 + k_2) + k_1 u_1\big)^2}
+{4 k_2 (a_2 - a_1)(u_2 - u_1)}\]
 
-For the first interval $T \le a_1$ , $P_{\text{success}}(T) = k_1$ is constant thus no maximum point.
-In the second interval $a_1 < T \le u_1$ , we can see that $P_{\text{success}}(T)$ is a strictly increasing function, as its derivative is a constant positive value. Thus the maximum point is at $T_{\text{opt2}} = u_1$.
-In the third interval $u_1 < T \le a_2$ , we differentiate $P_{\text{success}}(T)$ and find the critical point:
-\[
-T_{\text{opt3}} = \frac{a_1 (k_1 + k_3) \;-\; a_2 k_1 \;+\; k_3 u_2}{2 k_3}
+For both wallet types, we observed that the optimal operating point $T_{\text{opt}}$ differs from the equal error rate (EER) point $T_{\text{EER}}$. As the EER depends on the PDF's type solely, we calculated the EER point and showed each wallet's success in Figure 9 and Figure 10 respectively.
+\[T_{\text{EER}} = \frac{a_1 u_1 - a_2 u_2}{a_1 - a_2 + u_1 - u_2}
 \]
-In the fourth interval $a_2 < T \le u_2$ , we can see that $P_{\text{success}}(T)$ is a strictly decreasing function, as its derivative is a constant negative value. Thus the maximum point is at $T_{\text{opt4}} = a_2$.
-
-The optimal operating point is obtained in the third interval, where both distributions overlap and the success function achieves its interior maximum:
-\[P_{\text{success}}(T_{\text{opt}}) = \frac{\left(-a_1 (k_1 + k_3) + a_2 k_1 + k_3 u_2\right)^2}{4 k_3 (a_2 - a_1)(u_2 - u_1)}
-\] 
 
 
 \section{Model}
