--- a/Integrating_continuous_credentials.tex
+++ b/Integrating_continuous_credentials.tex
@@ -8,6 +8,12 @@
 \usepackage{graphicx}
 \usepackage{adjustbox}
 \usepackage{float}
+\usepackage{amsthm}
+\newtheorem{theorem}{Theorem}[section]
+\newtheorem{lemma}[theorem]{Lemma}
+
+\theoremstyle{definition}
+\newtheorem{definition}{Definition}
 
 \title{Integrating Continuous Credentials in Authentication
 Mechanisms}
@@ -27,6 +33,10 @@ Authentication is a fundamental aspect of security that can be viewed from two m
 Continuous credentials appear in several applications such as biometric authentication (fingerprints, eigenface or iris) and SSO mechanisms that rely on behavioral or environmental signals like GPS location etc. These credentials are not evaluated in a discrete way. Rather, they are measured by a mechanism that determines whether there are enough similarities above a predetermined threshold between an input and a stored figure.
 
 These mechanisms introduce a spectrum of confidence instead of a strict yes or no decision. As achieving high security level based on one credential and satisfying the mechanism might be hard, we aim to study the integration of several continuous credentials. Our research will explore how multiple continuous credentials can be fused to form a robust authentication mechanism and determine an optimal mechanism, achieving high security level in wallet design for both digital and physical assets.
+\section{Introduction}
+%%%
+%%%
+%%%
 \section{Related Work}
 Lin Hong et al.~\cite{hong1998} found that automatic personal identification system based solely on fingerprints or faces is often not able to reach sufficiently low FAR and FRR. They integrated a biometric system which makes personal identification by integrating both faces and fingerprints operates during identification mode. The decision fusion of their system is designed to operate at measurement level, that is the system doesn’t just output a single decision or label but rather a set of labels with confidence values. The system decision is based on the confidence of each one of the modules which might lead to a more reliable and informative overall confidence score.
 
@@ -376,7 +386,7 @@ To quantify the effect of the variance on the deviation between the optimal oper
     \includegraphics[width=0.75\textwidth]{fig_gap_vs_variance_parabola.pdf}
     \caption{Gap between optimal point and EER point vs Variance of the attacker parabolic distributed}
 \end{figure}
-\subsection{Two Credentials}
+\section{Two Credentials}
 For a wallet $w$ comprised of two independently and identically distributed credentials, derived from either the same or different PDF’s, we defined the integrated system success as the probability of users successfully defend their wallets under two scenarios:
 
 a. \textbf{AND} Require both credentials to be satisfied. For success, we need both credentials to be either in safe state, or one in safe state and the other in leak state. If one of the credentials is either loss ot theft, the owner cannot satisfy the wallet and thus the wallet fails.
@@ -460,6 +470,32 @@ u_2 + a_2
 }{2}
 \]
 
+Since this expression is valid only for the interval
+$u_1 < T \le a_2$, the effective maximizer within this interval
+is obtained by projecting the unconstrained optimum onto the
+feasible domain:
+\[
+T_{\text{opt},3}^{(\text{interval})}
+=
+\min\!\left(
+a_2,\;
+\max\!\left(u_1,\; T_{\text{opt},3}\right)
+\right).
+\]
+
+In particular, if $T_{\text{opt},3} < u_1$, the maximum over this interval is  attained at $T=u_1$, whereas if $T_{\text{opt},3} > a_2$, the maximum is attained at $T=a_2$.
+In all configurations consisting of one discrete and one continuous credential, ingertating the wallet with the continuous credential monotonically enhances its security. Evaluating the success probability at the user threshold $T=u_1$ yields
+\[
+P_{\text{success}}(u_1)
+=
+P^{1}_{\text{safe}} + P^{1}_{\text{leak}}(1
+- \frac{a_2 - u_1}{a_2 - a_1}).
+\]
+Since $u_1 > a_1$, it follows that
+\[
+P_{\text{success}}(u_1) > P^{1}_{\text{safe}},
+\]
+Demonstrating that the integration of the continuous credential strictly improves the security of the wallet compared to using the discrete credential alone.
 
 By examining the optimal point in this interval, we can deduce that as the variance of the attacker distribution increases, the optimal threshold $T_{\text{opt3}}$ shifts toward the lower boundry of the interval, $u_1$. Moreover, for a discrete credential with high safe values $P^{1}_{\text{safe}}$, and low leak values $P^{1}_{\text{leak}}$, the optimal threshold shifts toward the lower boundary as well. Thus, in such case, the success of the wallet becomes mainly dependent on the discrete credential. Conversely, a discrete credential with high leak values $P^{1}_{\text{leak}}$ and low safe values $P^{1}_{\text{safe}}$ causes the optimal threshold to shift toward the upper boundary of the interval, $a_2$. In this scenario, the success of the wallet relies more heavily on the continuous credential.
 
@@ -529,21 +565,89 @@ For both wallet types, we observed that the optimal operating point $T_{\text{op
 \[T_{\text{EER}} = \frac{a_1 u_1 - a_2 u_2}{a_1 - a_2 + u_1 - u_2}
 \]
 
+\begin{theorem}
+\label{thm:continuous-improves-security}
+For any wallet $w$ composed of one discrete credential and success function $P^{\text{discrete}}_{\text{success}}$, there exists $T'$ such that augmenting the wallet with a continuously distributed credential improves its achievable security. That is,
+\[
+P^{\text{integrated}}_{\text{success}}(T')
+\ge
+P^{\text{discrete}}_{\text{success}} .
+\]
+\end{theorem}
 
-\section{Model}
-\subsection{Mechanism Success 2 credentials}
-\subsection{Mechanism Success 3 credentials}
-%%%
-%%%
-%%%
-\section{Optimal Mechanism}
-%%%
+\begin{proof}
+A discrete credential is characterized by fixed probability states $P^{1}_{\text{safe}}, P^{1}_{\text{loss}}, P^{1}_{\text{leak}}, P^{1}_{\text{theft}}$. Thus the success probability of a wallet composed solely of this discrete credential is constant and given by: 
+\[P^{\text{discrete}}_{\text{success}} = 
+P^{1}_{\text{safe}}
+\]
+A continuously distributed credential is characterized by 4 probability states that depend on the operating threshold $T$: $P^{2}_{\text{safe}}(T), P^{2}_{\text{loss}}(T), P^{2}_{\text{leak}}(T), P^{2}_{\text{theft}}(T)$. We can describe each one of these probabilities as a function of False acceptance rate (FAR) and False rejection rate (FRR) as follows:
+\[ \begin{aligned}
+P^{2}_{\text{safe}}(T) &= 1 - \text{FAR}(T) - \text{FRR}(T) + \text{FAR}(T) \cdot \text{FRR}(T),\\
+P^{2}_{\text{loss}}(T) &= \text{FRR}(T)\,\bigl(1 - \text{FAR}(T)\bigr),\\
+P^{2}_{\text{leak}}(T) &= \text{FAR}(T)\,\bigl(1 - \text{FRR}(T)\bigr),\\
+P^{2}_{\text{theft}}(T) &= \text{FAR}(T) \cdot \text{FRR}(T).
+\end{aligned}
+\]
+The success probability of the integrated wallet comprised of 2 credentials is described by Equation~\ref{eqn:andsuccess} and Equation~\ref{eqn:orsuccess}. Thus, we can express the success probability of the integrated wallet as a function of the operating threshold $T$:
+\[
+P^{\text{AND}}_{\text{success}}(T)
+=
+\bigl(1-\mathrm{FRR}(T)\bigr)
+\left[
+P^{1}_{\text{safe}}
++
+P^{1}_{\text{leak}}\bigl(1-\mathrm{FAR}(T)\bigr)
+\right].
+\]
+
+\[
+P^{\text{OR}}_{\text{success}}(T)
+=
+\bigl(1-\mathrm{FAR}(T)\bigr)
+\Bigl(
+P^{1}_{\text{safe}}
++
+P^{1}_{\text{loss}}\bigl(1-\mathrm{FRR}(T)\bigr)
+\Bigr).
+\]
+
+Our problem is divided into two cases:
+
+a. $a_1<u_1$ : In this case, there exists an operating threshold $T'$ such that $a_1 < T' \le u_1$. In this interval, the FAR is strictly less than 1 and the FRR is equal to 0. Thus, we can choose using an \textbf{AND} wallet, represented by the success function:
+\[
+P^{\text{AND}}_{\text{success}}(T')
+=
+P^{1}_{\text{safe}}
++
+P^{1}_{\text{leak}}\bigl(1-\mathrm{FAR}(T')\bigr)
+\;\le\;
+\max_{T}\,
+P^{\text{AND}}_{\text{success}}(T).
+\]
+Since we assumed that $P^{1}_{\text{leak}}\ge0$ and $\mathrm{FAR}(T')\le1$, it follows that:
+\[P^{\text{AND}}_{\text{success}}(T') \ge
+P^{1}_{\text{safe}} = P^{\text{discrete}}_{\text{success}}
+\]
+
+b. $a_1 \ge u_1$ : In this case, there exists an operating threshold $T'$ such that $a_2 < T' < u_2$. In this interval, the FAR is equal to 0 and the FRR is strictly less than 1. Thus, we can choose using an \textbf{OR} wallet, represented by the success function:
+\[
+P^{\text{OR}}_{\text{success}}(T') =
+P^{1}_{\text{safe}} +
+P^{1}_{\text{loss}}\bigl(1-\mathrm{FRR}(T')\bigr)
+\;\le\; \max_{T}\,P^{\text{OR}}_{\text{success}}(T).
+\]
+Since we assumed that $P^{1}_{\text{loss}}\ge0$ and $\mathrm{FRR}(T')\le1$, it follows that:
+\[P^{\text{OR}}_{\text{success}}(T') \ge 
+P^{1}_{\text{safe}} = P^{\text{discrete}}_{\text{success}}
+\]
+NOTE: Equalitiy is achieved only when $P^{1}_{\text{leak}}=0$ in case a. or $P^{1}_{\text{loss}}=0$ in case b., or $a_1 = u_1$ and $a_2 = u_2$ - which implies identical user and attacker distributions, making the continuous credential ineffective.
+\end{proof}
+
+\subsection{2 Continuous Credentials}
 %%%
 %%%
 \section{Conclusion}
-%%%
-%%%
-%%%
+
 \begin{thebibliography}{9}
 
 \bibitem{hong1998}
