adding tex with todo

--- a/Integrating_continuous_credentials.tex
+++ b/Integrating_continuous_credentials.tex
@@ -641,6 +641,7 @@ Since we assumed that $P^{1}_{\text{loss}}\ge0$ and $\mathrm{FRR}(T')\le1$, it f
 P^{1}_{\text{safe}} = P^{\text{discrete}}_{\text{success}}
 \]
 NOTE: Equalitiy is achieved only when $P^{1}_{\text{leak}}=0$ in case a. or $P^{1}_{\text{loss}}=0$ in case b., or $a_1 = u_1$ and $a_2 = u_2$ - which implies identical user and attacker distributions, making the continuous credential ineffective.
+TODO
 \end{proof}
 
 \subsection{2 Continuous Credentials}
