proofs and 2 cred python code

--- a/Integrating_continuous_credentials.tex
+++ b/Integrating_continuous_credentials.tex
@@ -15,8 +15,7 @@
 \theoremstyle{definition}
 \newtheorem{definition}{Definition}
 
-\title{Integrating Continuous Credentials in Authentication
-Mechanisms}
+\title{2CIA: Continuous Credentials Integration in Authentication Mechanisms}
 \author{Dor Malka, Ittay Eyal}
 \date{\today}
 
@@ -24,7 +23,7 @@ Mechanisms}
 
 \maketitle
 
-\section{Abstract}
+\abstract{
 %%%
 %%%
 %%%
@@ -33,6 +32,7 @@ Authentication is a fundamental aspect of security that can be viewed from two m
 Continuous credentials appear in several applications such as biometric authentication (fingerprints, eigenface or iris) and SSO mechanisms that rely on behavioral or environmental signals like GPS location etc. These credentials are not evaluated in a discrete way. Rather, they are measured by a mechanism that determines whether there are enough similarities above a predetermined threshold between an input and a stored figure.
 
 These mechanisms introduce a spectrum of confidence instead of a strict yes or no decision. As achieving high security level based on one credential and satisfying the mechanism might be hard, we aim to study the integration of several continuous credentials. Our research will explore how multiple continuous credentials can be fused to form a robust authentication mechanism and determine an optimal mechanism, achieving high security level in wallet design for both digital and physical assets.
+}
 \section{Introduction}
 %%%
 %%%
@@ -565,13 +565,69 @@ For both wallet types, we observed that the optimal operating point $T_{\text{op
 \[T_{\text{EER}} = \frac{a_1 u_1 - a_2 u_2}{a_1 - a_2 + u_1 - u_2}
 \]
 
+\begin{definition}
+\label{def:User and Attacker distribution functions}
+A continuously distributed credential with user distribution fucntion $P_u(s)$ and attacker distribution function $P_a(s)$
+is said to be \emph{asymptotically dominated} if:
+\[
+\forall c>0 \;\exists T \;\text{s.t.}\; \forall x \ge T:\;
+p_a(x) \le c\,p_u(x)
+\]
+\[\quad\text{or}\quad\] 
+\[
+\forall c>0 \;\exists T \;\text{s.t.}\; \forall x \le T:\;
+p_u(x) \le c\,p_a(x).
+\]
+\end{definition}
+
+We will show that \emph{asymptotically dominancy} of user and attacker distribution functions is a sufficient and necessary condition for a continuous credential to improve the security of a wallet composed of discrete credentials.
+
+\begin{theorem}
+\label{thm:necessary condition}
+Given a continuously distributed credential which is not asymptotically dominated, then for any wallet $w$ composed of one discrete credential and success function $P^{\text{discrete}}_{\text{success}}$, augmenting the wallet with this continuous credential does not improve its achievable security.
+\end{theorem}
+\begin{proof}
+We prove this by contradiction. Assume for the sake of contradiction that the credential satisfies the theorem while the asymptotic domination condition does not hold. Therfore, there exists a threshold $T$ such that either:
+\[
+P^{\text{AND}}_{\text{success}}(T)
+=
+\bigl(1-\mathrm{FRR}(T)\bigr)
+\left[
+P^{1}_{\text{safe}}
++
+P^{1}_{\text{leak}}\bigl(1-\mathrm{FAR}(T)\bigr)
+\right] > P^{1}_{\text{safe}}
+\]
+Or:
+\[
+P^{\text{OR}}_{\text{success}}(T)=\bigl(1-\mathrm{FAR}(T)\bigr)\Bigl(P^{1}_{\text{safe}}+P^{1}_{\text{loss}}\bigl(1-\mathrm{FRR}(T)\bigr)\Bigr) > P^{1}_{\text{safe}}
+\]
+Thus, we can deduce that either:
+\[\frac{\mathrm{FRR}(T)}{1-\mathrm{FAR}(T)} < \frac{P^{1}_{\text{leak}}}{P^{1}_{\text{safe}}+P^{1}_{\text{leak}}}
+\]
+Or:
+\[\frac{\mathrm{FAR}(T)}{1-\mathrm{FRR}(T)} < \frac{P^{1}_{\text{loss}}}{P^{1}_{\text{safe}}+P^{1}_{\text{loss}}}
+\]
+These inequalities holds for every values of $P^{1}_{\text{safe}}, P^{1}_{\text{loss}}, P^{1}_{\text{leak}}$ in the range of $(0,1)$. Thus, we can deduce that the following inequalities hold for every right hand constant $c > 0$.
+Since the asymptotic domination condition does not hold, then either $\exists c>0 \;\text{s.t.}\; \forall T \;\exists s \ge T:\;$
+\[p_a(s) > c\,p_u(s)
+\]
+Or $\exists c>0 \;\text{s.t.}\; \forall T \;\exists s \le T:\;$
+\[p_u(s) > c\,p_a(s)
+\]
+Thus, we can deduce that either:
+\[
+\frac{\mathrm{FRR}(T)}{1-\mathrm{FAR}(T)} = \frac{\int_{-\infty}^{T} p_u(s) ds}{\int_{-\infty}^{T} p_a(s) ds} \ge \frac{1}{c}
+\]
+
+
+
+\end{proof}
 \begin{theorem}
 \label{thm:continuous-improves-security}
-For any wallet $w$ composed of one discrete credential and success function $P^{\text{discrete}}_{\text{success}}$, there exists $T'$ such that augmenting the wallet with a continuously distributed credential improves its achievable security. That is,
+For any wallet $w$ composed of one discrete credential and success function $P^{\text{discrete}}_{\text{success}}$, augmenting the wallet with an asymptotically dominated continuous credential improves its achievable security. That is,
 \[
-P^{\text{integrated}}_{\text{success}}(T')
-\ge
-P^{\text{discrete}}_{\text{success}} .
+P^{\text{integrated}}_{\text{success}}(T) > P^{\text{discrete}}_{\text{success}} .
 \]
 \end{theorem}
 
@@ -589,7 +645,8 @@ P^{2}_{\text{theft}}(T) &= \text{FAR}(T) \cdot \text{FRR}(T).
 \end{aligned}
 \]
 The success probability of the integrated wallet comprised of 2 credentials is described by Equation~\ref{eqn:andsuccess} and Equation~\ref{eqn:orsuccess}. Thus, we can express the success probability of the integrated wallet as a function of the operating threshold $T$:
-\[
+\begin{equation}
+    \label{eqn:andineq}
 P^{\text{AND}}_{\text{success}}(T)
 =
 \bigl(1-\mathrm{FRR}(T)\bigr)
@@ -598,9 +655,9 @@ P^{1}_{\text{safe}}
 +
 P^{1}_{\text{leak}}\bigl(1-\mathrm{FAR}(T)\bigr)
 \right].
-\]
-
-\[
+\end{equation}
+\begin{equation}
+    \label{eqn:orineq}
 P^{\text{OR}}_{\text{success}}(T)
 =
 \bigl(1-\mathrm{FAR}(T)\bigr)
@@ -609,41 +666,49 @@ P^{1}_{\text{safe}}
 +
 P^{1}_{\text{loss}}\bigl(1-\mathrm{FRR}(T)\bigr)
 \Bigr).
-\]
+\end{equation}
+We need to show that there exists an operating threshold $T$ such that either 
+$P^{\text{AND}}_{\text{success}}(T) > P^1_{\text{safe}}$ or $P^{\text{OR}}_{\text{success}}(T) > P^1_{\text{safe}}$.
 
-Our problem is divided into two cases:
-
-a. $a_1<u_1$ : In this case, there exists an operating threshold $T'$ such that $a_1 < T' \le u_1$. In this interval, the FAR is strictly less than 1 and the FRR is equal to 0. Thus, we can choose using an \textbf{AND} wallet, represented by the success function:
+We can deduce that $P^{\text{AND}}_{\text{success}}(T) > P^1_{\text{safe}}$ if and only if:
 \[
-P^{\text{AND}}_{\text{success}}(T')
-=
-P^{1}_{\text{safe}}
-+
-P^{1}_{\text{leak}}\bigl(1-\mathrm{FAR}(T')\bigr)
-\;\le\;
-\max_{T}\,
-P^{\text{AND}}_{\text{success}}(T).
+\frac{\mathrm{FRR}(T)}{1-\mathrm{FAR}(T)} < \frac{P^{1}_{\text{leak}}}{P^{1}_{\text{safe}}+P^{1}_{\text{leak}}\cdot(1-\mathrm{FAR}(T))}
 \]
-Since we assumed that $P^{1}_{\text{leak}}\ge0$ and $\mathrm{FAR}(T')\le1$, it follows that:
-\[P^{\text{AND}}_{\text{success}}(T') \ge
-P^{1}_{\text{safe}} = P^{\text{discrete}}_{\text{success}}
-\]
+Since $P^{1}_{\text{leak}}\cdot(1-\mathrm{FAR}(T)) < P^{1}_{\text{leak}}$, a sufficient condition for the above inequality is:
 
-b. $a_1 \ge u_1$ : In this case, there exists an operating threshold $T'$ such that $a_2 < T' < u_2$. In this interval, the FAR is equal to 0 and the FRR is strictly less than 1. Thus, we can choose using an \textbf{OR} wallet, represented by the success function:
+\begin{equation}
+    \label{eqn:FRRineq}
+\frac{\mathrm{FRR}(T)}{1-\mathrm{FAR}(T)} < \frac{P^{1}_{\text{leak}}}{P^{1}_{\text{safe}}+P^{1}_{\text{leak}}}
+\end{equation}
+
+Similarly, we can deduce that $P^{\text{OR}}_{\text{success}}(T) > P^1_{\text{safe}}$ if and only if:
+\[\frac{\mathrm{FAR}(T)}{1-\mathrm{FRR}(T)} < \frac{P^{1}_{\text{loss}}}{P^{1}_{\text{safe}}+P^{1}_{\text{loss}}\cdot(1-\mathrm{FRR}(T))}\]
+Since $P^{1}_{\text{loss}}\cdot(1-\mathrm{FRR}(T)) < P^{1}_{\text{loss}}$, a sufficient condition for the above inequality is:
+\begin{equation}
+    \label{eqn:FARineq}
+    \frac{\mathrm{FAR}(T)}{1-\mathrm{FRR}(T)} < \frac{P^{1}_{\text{loss}}}{P^{1}_{\text{safe}}+P^{1}_{\text{loss}}}
+\end{equation}
+For small values of $T$ in the interval of $(-\infty,T]$, we can look at Equation~\ref{eqn:FRRineq}. 
 \[
-P^{\text{OR}}_{\text{success}}(T') =
-P^{1}_{\text{safe}} +
-P^{1}_{\text{loss}}\bigl(1-\mathrm{FRR}(T')\bigr)
-\;\le\; \max_{T}\,P^{\text{OR}}_{\text{success}}(T).
+\frac{\mathrm{FRR}(T)}{1-\mathrm{FAR}(T)} = \frac{\int_{-\infty}^{T} P_u(s) ds}{\int_{-\infty}^{T} P_a(s) ds}
 \]
-Since we assumed that $P^{1}_{\text{loss}}\ge0$ and $\mathrm{FRR}(T')\le1$, it follows that:
-\[P^{\text{OR}}_{\text{success}}(T') \ge 
-P^{1}_{\text{safe}} = P^{\text{discrete}}_{\text{success}}
+By Definition~\ref{def:User and Attacker distribution functions}, since the continuous credential is asymptotically dominated, it follows that there exists an operating threshold $T$ such that for every $s \le T,$ $P_u(s) \le c\cdot\,P_a(s)$. Therefore:
+\[
+\frac{\int_{-\infty}^{T} P_u(s) ds}{\int_{-\infty}^{T} P_a(s) ds} \le \frac{\int_{-\infty}^{T} c \cdot P_a(s) ds}{\int_{-\infty}^{T} P_a(s) ds} = c
 \]
-NOTE: Equalitiy is achieved only when $P^{1}_{\text{leak}}=0$ in case a. or $P^{1}_{\text{loss}}=0$ in case b., or $a_1 = u_1$ and $a_2 = u_2$ - which implies identical user and attacker distributions, making the continuous credential ineffective.
-TODO
+This is true $\forall c > 0,$ thus we can choose $c$ such that it satisfies Equation~\ref{eqn:FRRineq}.\\
+For large values of $T$ in the interval of $[T,\infty,)$, we can look at Equation~\ref{eqn:FARineq}. 
+\[
+\frac{\mathrm{FAR}(T)}{1-\mathrm{FRR}(T)} = \frac{\int_{T}^{\infty} P_a(s) ds}{\int_{T}^{\infty} P_u(s) ds}
+\]
+By Definition~\ref{def:User and Attacker distribution functions}, since the continuous credential is asymptotically dominated, it follows that there exists an operating threshold $T$ such that for every $s \ge T,$ $P_a(s) \le c\cdot\,P_u(s)$. Therefore: 
+\[
+\frac{\int_{T}^{\infty} P_a(s) ds}{\int_{T}^{\infty} P_u(s) ds} \le \frac{\int_{T}^{\infty} c \cdot P_u(s) ds}{\int_{T}^{\infty} P_u(s) ds} = c, \forall c > 0
+\]
+We show that either $\frac{\mathrm{FAR}(T)}{1-\mathrm{FRR}(T)} < \varepsilon$ or $\frac{\mathrm{FRR}(T)}{1-\mathrm{FAR}(T)} < \varepsilon$ for any $\varepsilon > 0$.
 \end{proof}
 
+This proof is not trivial, as the integration of another discrete credential to a discrete credentail based wallet, does not always enhance its security. For example, if the wallet is comprised of 1 discrete credential with high safe values and low leak values, adding a discrete credential with low safe values and high leak values would decrease the overall security. Thus, Theorem~\ref{thm:continuous-improves-security} shows that by using a separable continuous credential, we can always improve the security of any discrete credential based wallet.
 \subsection{2 Continuous Credentials}
 %%%
 %%%
